test-data/vpc2/json-dumps/compute-network-routes.json
{
  "kind": "compute#routeList",
  "id": "projects/gcpdiag-vpc2-runbook/global/routes",
  "items": [
    {
      "kind": "compute#route",
      "id": "6504832813046471455",
      "creationTimestamp": "2024-06-02T19:09:52.075-07:00",
      "name": "default-route-0256760961424ef9",
      "description": "Default local route to the subnetwork 10.0.0.0/24.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.0.0.0/24",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-0256760961424ef9"
    },
    {
      "kind": "compute#route",
      "id": "5567157631748206080",
      "creationTimestamp": "2024-05-30T21:24:15.897-07:00",
      "name": "default-route-098f7fe9ec876980",
      "description": "Default local route to the subnetwork 10.138.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.138.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-098f7fe9ec876980"
    },
    {
      "kind": "compute#route",
      "id": "4975633896561765919",
      "creationTimestamp": "2024-05-30T21:24:16.048-07:00",
      "name": "default-route-162969572b253fc6",
      "description": "Default local route to the subnetwork 10.132.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.132.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-162969572b253fc6"
    },
    {
      "kind": "compute#route",
      "id": "6290265124635995648",
      "creationTimestamp": "2024-05-30T21:24:15.346-07:00",
      "name": "default-route-32b1ae3462c226b4",
      "description": "Default local route to the subnetwork 10.202.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.202.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-32b1ae3462c226b4"
    },
    {
      "kind": "compute#route",
      "id": "5951494803160362526",
      "creationTimestamp": "2024-05-30T21:24:17.044-07:00",
      "name": "default-route-359865837b3f5c4c",
      "description": "Default local route to the subnetwork 10.210.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.210.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-359865837b3f5c4c"
    },
    {
      "kind": "compute#route",
      "id": "1186609843905238139",
      "creationTimestamp": "2024-05-31T03:46:45.004-07:00",
      "name": "default-route-3bd81733a6885746",
      "description": "Default local route to the subnetwork 10.196.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.196.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-3bd81733a6885746"
    },
    {
      "kind": "compute#route",
      "id": "9123881136885657118",
      "creationTimestamp": "2024-05-30T21:24:17.599-07:00",
      "name": "default-route-3d71e3ffb7b793e2",
      "description": "Default local route to the subnetwork 10.168.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.168.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-3d71e3ffb7b793e2"
    },
    {
      "kind": "compute#route",
      "id": "7308510787146149407",
      "creationTimestamp": "2024-05-30T21:24:16.683-07:00",
      "name": "default-route-41a15b5b06c6e5b6",
      "description": "Default local route to the subnetwork 10.164.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.164.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-41a15b5b06c6e5b6"
    },
    {
      "kind": "compute#route",
      "id": "2763373422954475034",
      "creationTimestamp": "2024-05-30T21:24:21.780-07:00",
      "name": "default-route-478468a891fadc87",
      "description": "Default local route to the subnetwork 10.194.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.194.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-478468a891fadc87"
    },
    {
      "kind": "compute#route",
      "id": "2607223156694642205",
      "creationTimestamp": "2024-05-30T21:24:18.874-07:00",
      "name": "default-route-489ed525a0117f1b",
      "description": "Default local route to the subnetwork 10.174.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.174.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-489ed525a0117f1b"
    },
    {
      "kind": "compute#route",
      "id": "3246083178149244443",
      "creationTimestamp": "2024-05-30T21:24:20.818-07:00",
      "name": "default-route-5252c68c47ecb304",
      "description": "Default local route to the subnetwork 10.148.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.148.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-5252c68c47ecb304"
    },
    {
      "kind": "compute#route",
      "id": "8941047407046880798",
      "creationTimestamp": "2024-05-30T21:24:17.782-07:00",
      "name": "default-route-5757ee60f1680659",
      "description": "Default local route to the subnetwork 10.186.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.186.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-5757ee60f1680659"
    },
    {
      "kind": "compute#route",
      "id": "4419597277118918175",
      "creationTimestamp": "2024-05-30T21:24:16.119-07:00",
      "name": "default-route-594f82c5c4606a64",
      "description": "Default local route to the subnetwork 10.162.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.162.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-594f82c5c4606a64"
    },
    {
      "kind": "compute#route",
      "id": "6353336843931807233",
      "creationTimestamp": "2024-05-30T21:24:14.531-07:00",
      "name": "default-route-5a86e4d51373c72a",
      "description": "Default local route to the subnetwork 10.206.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.206.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-5a86e4d51373c72a"
    },
    {
      "kind": "compute#route",
      "id": "2784935868177378847",
      "creationTimestamp": "2024-05-30T21:24:16.813-07:00",
      "name": "default-route-65021bdf65c9447c",
      "description": "Default local route to the subnetwork 10.172.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.172.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-65021bdf65c9447c"
    },
    {
      "kind": "compute#route",
      "id": "4432167937724422912",
      "creationTimestamp": "2024-06-02T19:09:51.807-07:00",
      "name": "default-route-652ce9d5b5cca29c",
      "description": "Default local route to the subnetwork 10.10.0.0/24.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.10.0.0/24",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-652ce9d5b5cca29c"
    },
    {
      "kind": "compute#route",
      "id": "7343470871747816989",
      "creationTimestamp": "2024-05-30T21:24:18.316-07:00",
      "name": "default-route-654bb6ab29dde3b0",
      "description": "Default local route to the subnetwork 10.208.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.208.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-654bb6ab29dde3b0"
    },
    {
      "kind": "compute#route",
      "id": "4236987435335347741",
      "creationTimestamp": "2024-05-30T21:24:18.444-07:00",
      "name": "default-route-663f8640c2ad7135",
      "description": "Default local route to the subnetwork 10.178.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.178.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-663f8640c2ad7135"
    },
    {
      "kind": "compute#route",
      "id": "4039912384217017862",
      "creationTimestamp": "2024-05-30T21:24:09.632-07:00",
      "name": "default-route-733dd203fb86133b",
      "description": "Default route to the Internet.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "0.0.0.0/0",
      "priority": 1000,
      "nextHopGateway": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/gateways/default-internet-gateway",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-733dd203fb86133b"
    },
    {
      "kind": "compute#route",
      "id": "1989173501624643102",
      "creationTimestamp": "2024-05-30T21:24:17.314-07:00",
      "name": "default-route-76e7a2d55acd6c17",
      "description": "Default local route to the subnetwork 10.198.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.198.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-76e7a2d55acd6c17"
    },
    {
      "kind": "compute#route",
      "id": "169643802476473882",
      "creationTimestamp": "2024-05-30T21:24:21.656-07:00",
      "name": "default-route-780976f08fea61e5",
      "description": "Default local route to the subnetwork 10.218.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.218.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-780976f08fea61e5"
    },
    {
      "kind": "compute#route",
      "id": "449770163751153152",
      "creationTimestamp": "2024-05-30T21:24:15.936-07:00",
      "name": "default-route-78ded18ec0e6ec9e",
      "description": "Default local route to the subnetwork 10.182.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.182.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-78ded18ec0e6ec9e"
    },
    {
      "kind": "compute#route",
      "id": "2400967123354840605",
      "creationTimestamp": "2024-05-30T21:24:18.378-07:00",
      "name": "default-route-7c67edeed583ea2b",
      "description": "Default local route to the subnetwork 10.140.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.140.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-7c67edeed583ea2b"
    },
    {
      "kind": "compute#route",
      "id": "9217106666220482049",
      "creationTimestamp": "2024-05-30T21:24:14.156-07:00",
      "name": "default-route-7f23cca4f2794d4d",
      "description": "Default local route to the subnetwork 10.128.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.128.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-7f23cca4f2794d4d"
    },
    {
      "kind": "compute#route",
      "id": "9023919956369403419",
      "creationTimestamp": "2024-05-30T21:24:20.632-07:00",
      "name": "default-route-82895d24b42d3fa4",
      "description": "Default local route to the subnetwork 10.158.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.158.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-82895d24b42d3fa4"
    },
    {
      "kind": "compute#route",
      "id": "6046833533714230808",
      "creationTimestamp": "2024-05-30T21:24:23.937-07:00",
      "name": "default-route-8c7c6946e9b3df48",
      "description": "Default local route to the subnetwork 10.192.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.192.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-8c7c6946e9b3df48"
    },
    {
      "kind": "compute#route",
      "id": "3506435050431639064",
      "creationTimestamp": "2024-05-30T21:24:23.386-07:00",
      "name": "default-route-8f34df4caa391385",
      "description": "Default local route to the subnetwork 10.184.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.184.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-8f34df4caa391385"
    },
    {
      "kind": "compute#route",
      "id": "5937812733867388447",
      "creationTimestamp": "2024-05-30T21:24:16.673-07:00",
      "name": "default-route-8f5bf5cc001fde03",
      "description": "Default local route to the subnetwork 10.156.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.156.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-8f5bf5cc001fde03"
    },
    {
      "kind": "compute#route",
      "id": "6296264682847399455",
      "creationTimestamp": "2024-05-30T21:24:16.474-07:00",
      "name": "default-route-901ccc748787fd4e",
      "description": "Default local route to the subnetwork 10.214.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.214.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-901ccc748787fd4e"
    },
    {
      "kind": "compute#route",
      "id": "966807634037763611",
      "creationTimestamp": "2024-05-30T21:24:20.710-07:00",
      "name": "default-route-93a00623ff2c9d9b",
      "description": "Default local route to the subnetwork 10.212.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.212.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-93a00623ff2c9d9b"
    },
    {
      "kind": "compute#route",
      "id": "8944993343825752807",
      "creationTimestamp": "2024-05-31T10:42:32.966-07:00",
      "name": "default-route-9bad42061d48e9bd",
      "description": "Default local route to the subnetwork 10.220.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.220.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-9bad42061d48e9bd"
    },
    {
      "kind": "compute#route",
      "id": "2920411012277792257",
      "creationTimestamp": "2024-05-30T21:24:14.730-07:00",
      "name": "default-route-9f7db9d88de1109a",
      "description": "Default local route to the subnetwork 10.142.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.142.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-9f7db9d88de1109a"
    },
    {
      "kind": "compute#route",
      "id": "6097409105791872543",
      "creationTimestamp": "2024-05-30T21:24:16.797-07:00",
      "name": "default-route-ae07c29208f9faea",
      "description": "Default local route to the subnetwork 10.204.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.204.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-ae07c29208f9faea"
    },
    {
      "kind": "compute#route",
      "id": "7409627734771822110",
      "creationTimestamp": "2024-05-30T21:24:17.816-07:00",
      "name": "default-route-b13cd7339b5abf15",
      "description": "Default local route to the subnetwork 10.146.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.146.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-b13cd7339b5abf15"
    },
    {
      "kind": "compute#route",
      "id": "1637122277981351455",
      "creationTimestamp": "2024-05-30T21:24:16.016-07:00",
      "name": "default-route-c945a8e45ba52c77",
      "description": "Default local route to the subnetwork 10.188.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.188.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-c945a8e45ba52c77"
    },
    {
      "kind": "compute#route",
      "id": "8773365948166237720",
      "creationTimestamp": "2024-05-30T21:24:23.440-07:00",
      "name": "default-route-d160f5979c71486e",
      "description": "Default local route to the subnetwork 10.160.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.160.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-d160f5979c71486e"
    },
    {
      "kind": "compute#route",
      "id": "7391783468506869276",
      "creationTimestamp": "2024-05-30T21:24:19.499-07:00",
      "name": "default-route-d5fd7f607073d322",
      "description": "Default local route to the subnetwork 10.152.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.152.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-d5fd7f607073d322"
    },
    {
      "kind": "compute#route",
      "id": "3256695458222108188",
      "creationTimestamp": "2024-05-30T21:24:19.396-07:00",
      "name": "default-route-d64c41358ef1ef42",
      "description": "Default local route to the subnetwork 10.166.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.166.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-d64c41358ef1ef42"
    },
    {
      "kind": "compute#route",
      "id": "4249506418894630400",
      "creationTimestamp": "2024-05-30T21:24:15.270-07:00",
      "name": "default-route-dc8e80c4aec139bb",
      "description": "Default local route to the subnetwork 10.150.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.150.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-dc8e80c4aec139bb"
    },
    {
      "kind": "compute#route",
      "id": "5057211972806045213",
      "creationTimestamp": "2024-05-30T21:24:18.504-07:00",
      "name": "default-route-ee8853665c7ab1e9",
      "description": "Default local route to the subnetwork 10.170.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.170.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-ee8853665c7ab1e9"
    },
    {
      "kind": "compute#route",
      "id": "2614791937042214400",
      "creationTimestamp": "2024-05-30T21:24:16.026-07:00",
      "name": "default-route-f99d363bdb25a8a8",
      "description": "Default local route to the subnetwork 10.154.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.154.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-f99d363bdb25a8a8"
    },
    {
      "kind": "compute#route",
      "id": "7296526758943452672",
      "creationTimestamp": "2024-05-30T21:24:15.461-07:00",
      "name": "default-route-f9c072bbc8f44b2b",
      "description": "Default local route to the subnetwork 10.180.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.180.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-f9c072bbc8f44b2b"
    },
    {
      "kind": "compute#route",
      "id": "405334320437587487",
      "creationTimestamp": "2024-05-30T21:24:16.633-07:00",
      "name": "default-route-f9c93e17b1e224fd",
      "description": "Default local route to the subnetwork 10.200.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.200.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-f9c93e17b1e224fd"
    },
    {
      "kind": "compute#route",
      "id": "5853707331362418200",
      "creationTimestamp": "2024-05-30T21:24:23.900-07:00",
      "name": "default-route-fc1ecfcfa61f4fde",
      "description": "Default local route to the subnetwork 10.190.0.0/20.",
      "network": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "destRange": "10.190.0.0/20",
      "priority": 0,
      "nextHopNetwork": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/networks/default",
      "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes/default-route-fc1ecfcfa61f4fde"
    }
  ],
  "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-vpc2-runbook/global/routes"
}
