test-data/vpc2/json-dumps/iam-service-accounts.json
{
  "accounts": [
    {
      "displayName": "Compute Engine default service account",
      "email": "12345601-compute@developer.gserviceaccount.com",
      "etag": "MDEwMjE5MjA=",
      "name": "projects/gcpdiag-vpc2-runbook/serviceAccounts/12345601-compute@developer.gserviceaccount.com",
      "oauth2ClientId": "REDACTED",
      "projectId": "gcpdiag-vpc2-runbook",
      "uniqueId": "111906885506070469088"
    }
  ]
}
